--- a/front-end/src/components/Task/Task.css
+++ b/front-end/src/components/Task/Task.css
@@ -13,8 +13,9 @@
 .taskHolder table tr{
     display: flex;
     justify-content: space-between;
-    /* border: 1px solid #000; */
-    
+    box-shadow: 10px 5px 5px #B7B597;
+    background-color: #DAD3BE;
+
     th{
         font-size: 40px;
         width: 300px;
@@ -25,17 +26,23 @@
         width: 300px;
         display: flex;
         justify-content: center;
-        
-
-        /* align-items: center; */
-        
+        text-align: center;
+        overflow:auto;        
     }
 }
 
-.taskHolder table tr:first-child{
-    background-color: aquamarine;
-    border-radius: 50px;   
+.taskHolder table tr:last-child{
+    background-color: #DAD3BE;
+    border-radius: 0   0 50px 50px;   
+
 }
+.taskHolder table tr:first-child{
+    background-color: #6B8A7A;
+    border-radius: 50px 50px 0   0; 
+    box-shadow: 10px 5px 5px #B7B597; 
+    /* box-shadow: none; */
+}
+
 .green{
     color: green;
 }
@@ -44,4 +51,10 @@
 }
 .taskHolder table tr td:nth-child(5),.taskHolder table tr td:nth-child(4){
     cursor: pointer;
+}
+.delete {
+    height: 50px;
+    :hover{
+        color: darkred;
+    }
 }
