--- a/front-end/src/components/Form/Form.css
+++ b/front-end/src/components/Form/Form.css
@@ -2,6 +2,7 @@
     margin-top: 2rem; 
     /* margin: 2rem; */
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 
@@ -12,16 +13,46 @@
     justify-content: center;
     align-items: center;
     gap: 3rem;
+    animation: fadeIn 1s ease-in-out;
 
 }
 
 .innerForm input{
     font-size: 2rem;
     padding: 1rem 1rem;
-    border-radius: 3rem;    border: 1px solid grey;
-    box-shadow: 10px 5px 5px #B7B597;
+    border: none;
+    border-radius: 3rem;    
+    border: none;
+    box-shadow: 5px 5px 5px #B7B597;
+    transition: transform 0.3s, box-shadow 0.3s;
 
 }
 .innerForm input[type=submit]{
     background-color: #DAD3BE ;
-    cursor: pointer;}
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+}
+
+    .innerForm input:hover, .innerForm input[type=submit]:hover {
+        transform: scale(1.05);
+        box-shadow: 10px 5px 15px #B7B597;
+    }
+@media (max-width: 480px) {
+    .innerForm {
+        gap: 0.5rem;
+    }
+
+    .innerForm input {
+        font-size: 1.5rem;
+        padding: 0.5rem;
+        border: none;
+    }
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
